frontend/test/should_fail/index_multiple_edge_index2_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	if{ edgesFromIndexMultipleFromTo(Ei, 0, 1, Ni, 42, 44).size() > 0; }
	
	modify {
	}
}
